helm/nginx/audit-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audit-service-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - audit.anirudhsanthanam.me
      secretName: audit-service-tls
  rules:
    - host: audit.anirudhsanthanam.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audit-service
                port:
                  number: 3000
